objects/Post_Closing_Item__c.object
<CustomObject>
    <description>Post-closing Contract Obligations, Revenue Recognition Reserves, Payment timing impact.  Used in conjunction with Contract and Dev Approval MIPA Execution record type</description>
    <fields>
        <fullName>Contract_and_Development_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract and Development Approval</label>
        <referenceTo>Contract_Committee_Submittal__c</referenceTo>
        <relationshipName>Risk_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Completion_Date__c</fullName>
        <label>Expected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Impact_on_Price__c</fullName>
        <label>Expected Impact ($) on Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Impact_on_Price__c</fullName>
        <label>Max Impact on Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Risk_Item__c</fullName>
        <label>Risk Item</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Interconnection</fullName>
                </value>
                <value>
                    <fullName>PILOT</fullName>
                </value>
                <value>
                    <fullName>Decommissioning Security</fullName>
                </value>
                <value>
                    <fullName>Ag &amp; Markets</fullName>
                </value>
                <value>
                    <fullName>Rollback Taxes</fullName>
                </value>
                <value>
                    <fullName>IDA Fees</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Post Closing Item</label>
    <nameField>
        <displayFormat>PCI-{0000}</displayFormat>
        <label>Post Closing Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post Closing Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>